refactor: 빈 리스트 반환 방식 변경